--- a/src/App.css
+++ b/src/App.css
@@ -78,11 +78,12 @@
   border: 1px solid #e8e8e8;
   background-color: #fff;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .book-title {
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', sans-serif;
   font-size: 1.375rem;
   font-weight: bold;
   margin-left: 0.93rem;
@@ -98,7 +99,7 @@
 }
 
 .book-author {
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', sans-serif;
   font-size: 0.875rem;
   color: #4386bf;
   margin-left: 0.93rem;
@@ -124,6 +125,41 @@
   color: #029aff;
 }
 
+.book-extra {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.progress-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.progress-img {
+  height: 4.25rem;
+}
+
+.percent {
+  font-size: 2rem;
+  color: #121212;
+}
+
+.completed {
+  color: #121212;
+  opacity: 0.5;
+  font-size: 0.875rem;
+}
+
+.divider {
+  background-color: #e8e8e8;
+  width: 0.125rem;
+  height: 4.375rem;
+}
+
 .form-container {
   border-top: 2px solid #e8e8e8;
   padding: 1.18rem 0;
@@ -135,7 +171,7 @@
 .form-title {
   font-size: 1.25rem;
   font-weight: bold;
-  color: #888888;
+  color: #888;
   letter-spacing: -0.18px;
 }
 
@@ -155,7 +191,7 @@
 }
 
 .input-control::placeholder {
-  color:  #c4c4c4;
+  color: #c4c4c4;
   font-size: 1rem;
 }
 
@@ -166,7 +202,7 @@
 
 .input-send {
   min-width: 120px !important;
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', sans-serif;
   font-weight: bold;
   color: #fff;
   background-color: #0290ff;
